Updated team names

--- a/index.css
+++ b/index.css
@@ -1,5 +1,8 @@
 body{
   margin: 0px;
+  background-image: url("ipl.avif") ;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 .container{
   text-align: center;
@@ -8,11 +11,11 @@ body{
   justify-content: space-around;
   width: 575px;
   height: 385px;
-  background-color: #1B244A;
+  background-color: rgb(202, 31, 31);
   color: white;
   font-family: Verdana;
   border-radius: 15px;
-  border: 3px solid blueviolet;
+  border: 3px solid yellow;
 }
 .score{
   margin: 20px;
@@ -35,4 +38,10 @@ button{
   background-color: #1B244A;
   cursor: pointer;
   color: white;
+}
+#csk{
+  background-color: yellow;
+}
+#rcb{
+  background-color: red;
 }
